cargo integration. Beware of unstable code! :)
git-svn-id: https://ejisto.googlecode.com/svn/trunk@62 a1e31c00-292e-b01b-3f4f-04888c7956ed